<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/ll_datetime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_expertpic">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="18dp"

                    android:layout_marginStart="20dp"
                    android:layout_height="18dp"
                    android:src="@drawable/baseline_calendar_month_24" />

                <TextView
                    android:id="@+id/tv_sessiondate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:textSize="13sp"
                    android:layout_marginStart="10dp"
                    android:text="29 June" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                 />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_access_time_24" />

                <TextView
                    android:id="@+id/tv_sessiontime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:textSize="13sp"

                    android:text="11:00 AM" />


            </LinearLayout>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_expertpic"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/docpic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_expertname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/dr_rakesh_joshi"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_expertpic"
                app:layout_constraintTop_toTopOf="@+id/iv_expertpic" />

            <TextView
                android:id="@+id/tv_expertdesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/psychiatrist"
                android:textSize="12sp"

                app:layout_constraintStart_toStartOf="@+id/tv_expertname"
                app:layout_constraintTop_toBottomOf="@+id/tv_expertname" />

            <TextView
                android:id="@+id/tv_sessionmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Online"
                android:textSize="11sp"

                android:textStyle="bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:background="@drawable/modetextview_bg"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_expertname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_expertname" />

            <Button
                android:id="@+id/btn_viewdetails"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/lykablue"
                android:text="@string/view_details"
                android:textAllCaps="false"
                android:textSize="13sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_datetime"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"

                android:backgroundTint="@color/white"
                android:textSize="13sp"

                android:text="@string/cancel"
                android:textAllCaps="false"

                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/btn_viewdetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_viewdetails" />
            <TextView
                android:id="@+id/tv_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_sessionstatus"
                android:textStyle="bold"
                android:text="Completed"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textColor="#72BF78"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_viewdetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_viewdetails" />
            <TextView
                android:id="@+id/tv_cancelled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_cancelled"
                android:textStyle="bold"
                android:text="Cancelled"

                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textColor="#FA7070"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_viewdetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_viewdetails" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>